# balltree

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  README.rst  TODO  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: pypi-publish.yml  python-ci.yml  python-extension-ci.yml  python-publish.yml
balltree/: __init__.py  angulartree.py  balltree.c  coordinates.py
cython/: wrapper.pyx
docs/: Makefile
docs/source/: .gitignore  api.rst  conf.py  examples.rst  index.rst
docs/source/_static/css/: custom.css
docs/source/api/: balltree.AngularTree.rst  balltree.coordinates.rst  balltree.default_leafsize.rst
include/: ballnode.h  balltree.h  balltree_macros.h  binning.h  containers.h  error_handling.h  histogram.h  point.h  queue.h
python/: balltree_wrapper.c
src/: ballnode.c  ballnode_query.c  ballnode_stats.c  balltree.c  balltree_serialize.c  balltree_serialize.c.old  binning.c  containers.c  histogram.c  main.c  point.c  point_utils.c  pointbuffer.c  pointbuffers.c  queue.c  writebuffer.c
tests/: test_angulartree.py  test_balltree.py  test_coordinates.py
