[build-system]
requires = ["setuptools>=61.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "balltree"
dynamic = ["version"]
authors = [
    {name = "Jan Luca van den Busch", email = "jlvdb@astro.ruhr-uni-bochum.de"},
]
description = "Fast balltree implementation for 3-dim data."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
requires-python = ">=3"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = ["pytest",]

[tool.setuptools.dynamic]
version = {attr = "balltree.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests",]
